create spbe
